--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "@types/node": "^22.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -15,7 +17,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.18",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
